# Romulus-I

./: .gitignore  README.md
Assembler/: CMakeLists.txt  Listener.cpp  a.txt  main.cpp  romASMLexer.g4  romASMParser.g4  test.txt
Assembler/.antlr/: romASMLexer.cpp  romASMLexer.h  romASMParser.cpp  romASMParser.h  romASMParser.interp  romASMParser.tokens  romASMParserBaseListener.cpp  romASMParserBaseListener.h  romASMParserBaseVisitor.cpp  romASMParserBaseVisitor.h  romASMParserListener.cpp  romASMParserListener.h  romASMParserVisitor.cpp  romASMParserVisitor.h
Assembler/antlr/: romASMLexer.g4  romASMParser.g4
Assembler/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
Assembler/cmake/antlr4_runtime/src/antlr4_runtime-stamp/: antlr4_runtime-gitinfo.txt  antlr4_runtime-update-info.txt
Assembler/cmake/antlr4_runtime/tmp/: antlr4_runtime-gitclone.cmake  antlr4_runtime-gitupdate.cmake  antlr4_runtime-mkdirs.cmake
Assembler/cmake/antlr4cpp_generated_src/TParser/: TParser.cpp  TParser.h
Assembler/src/: Listener.cpp  Listener.h  main.cpp
Digital/: ALU.dig  FSM.dig  RGBMatrix.dig  SevenSegment.dig
Flash/SST39SF010A-Flasher/: SST39SF010A-Flasher.ino
Hawk/: CMakeLists.txt  hawkLexer.g4  hawkParser.g4  input.txt
Hawk/.antlr/: HawkLexer.interp  HawkLexer.java  hawkLexer.cpp  hawkLexer.h  hawkParser.cpp  hawkParser.h  hawkParser.interp  hawkParser.java
Hawk/antlr/: hawkLexer.g4  hawkParser.g4
Hawk/src/: FunctionEntry.cpp  FunctionEntry.h  LRU.h  Memory.cpp  Memory.h  StackEntry.cpp  StackEntry.h  VariableEntry.cpp  VariableEntry.h  Visitor.cpp  Visitor.h  main.cpp  utils.cpp  utils.h
Management/: GANTT.xlsx  Gantt_Chart.pod
Simulator/: Makefile  a.txt
Simulator/examples/: fibonacci.txt  findPrimes.txt
Simulator/src/: Format.h  Romulus_Simulator.cpp  Utils.h  rom_sim.cpp
Specifications/: Control_Signals_FSM.dot  Flash.7z  hub75.txt
Specifications/Flash/hex_files/: ALU_U1.hex  ALU_U2.hex  ALU_U3.hex  FSM0.ROM  FSM1.ROM  FSM2.ROM  RGB.hex  fsm0.hex  fsm1.hex  fsm2.hex  fsm_U2.hex  fsm_U3.hex  fsm_U4.hex  hexDisplay.hex  hexDisplay.rom
Specifications/Flash/rom_files/: ALU_U1.ROM  ALU_U2.ROM  ALU_U3.ROM  FSM_U2.ROM  FSM_U3.ROM  FSM_U4.ROM  HEX.ROM  RGB.ROM
Specifications/Flash/src/: RGBMatrix.py  fsm.py  fsm0.hex  fsm2.hex
Specifications/Flash/src/ALU/: chip.cpp  chip.h  main.cpp
Specifications/Flash/src/DecimalDisplay/: HEX.hex  main.cpp
Specifications/Flash/src/HexDisplay/: main.cpp
Specifications/Flash/src/RAMFlasher/: RAMFlasher.ino
Specifications/Flash/src/arduinoFlasher/: arduinoFlasher.ino
Specifications/Flash/src/arduinoFlasher/arduinoFlasher/: arduinoFlasher.ino
Specifications/Flash/src/misc/: utils.cpp  utils.h
Specifications/Flash/src/teletypeFlasher/: teletypeFlasher.ino
Specifications/LEDMatrixTester/: LEDMatrixTester.ino
Specifications/Timing/: Control_Signals_FSM.dot
Verilog/: Romulus-I.qpf  Romulus-I.qsf  Romulus-I.qws  Romulus-I.v.bak  Romulus-I_nativelink_simulation.rpt  SN74LS573.v  SN74LS573.v.bak  cr_ie_info.json  testbench.v  testbench.v.bak
Verilog/db/: Romulus-I.(0).cnf.cdb  Romulus-I.(0).cnf.hdb  Romulus-I.(1).cnf.cdb  Romulus-I.(1).cnf.hdb  Romulus-I.ae.hdb  Romulus-I.cbx.xml  Romulus-I.cmp.rdb  Romulus-I.db_info  Romulus-I.hier_info  Romulus-I.hif  Romulus-I.lpc.html  Romulus-I.lpc.rdb  Romulus-I.lpc.txt  Romulus-I.map.qmsg  Romulus-I.map.rdb  Romulus-I.npp.qmsg  Romulus-I.pre_map.cdb  Romulus-I.pre_map.hdb  Romulus-I.rtlv.hdb  Romulus-I.rtlv_sg.cdb  Romulus-I.rtlv_sg_swap.cdb  Romulus-I.sgate.nvd  Romulus-I.sgate_sm.nvd  prev_cmp_Romulus-I.qmsg
Verilog/incremental_db/compiled_partitions/: Romulus-I.db_info
Verilog/output_files/: Romulus-I.done  Romulus-I.flow.rpt  Romulus-I.map.rpt  Romulus-I.map.smsg  Romulus-I.map.summary
Verilog/simulation/modelsim/: Romulus-I_run_msim_rtl_verilog.do.bak2  msim_transcript  vsim.wlf
Verilog/simulation/modelsim/rtl_work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
